sass/_article.scss
.article-page {
    --padding: calc(var(--content-padding));
    header {
        background-color: white;
        padding: var(--section-padding) var(--padding);
        .site-name { padding: 0; }
    }

    .section-highlight {
        background-image: none;
    }

    article {
        padding: var(--section-padding) 0;
        font-size: 18px;
        color: #444444;
        line-height: 28px;
        background-color: #F9F9FA;

        .meta {
            padding: 0 var(--padding);
            font-size: 14px;
            display: flex;
            gap: 12px;

            .date { color: var(--gray500); }
            .tags { 
                display: flex;
                gap: 9px; 

                a {
                    color: var(--gray400); 
                    text-decoration: none;

                    &:hover { color: black; }
                }
            }
        }

        h1, h2, h3, h4, h5, h6 {
            padding: 0 var(--padding);
            color: var(--gray700);
            margin-bottom: 32px;
            padding-top: 24px;
        }

        & > h1 {
            margin-top: 8px;
            padding-top: 0;
            margin-bottom: 60px;
            font-size: 32px;
            font-weight: bold;
        }

        h2 { font-size: 24px; }
        h3 { font-size: 20px; }

        p {
            padding: 0 var(--padding);
            margin-bottom: 40px;
        }

        pre {
            padding: 56px var(--padding);
            overflow-x: scroll;
            margin-top: 66px;
            margin-bottom: 40px;
            font-size: 16px;
            font-family: monospace;
            background-color: white !important;
            border-top: 1px solid rgba($color: #000000, $alpha: 0.07);
            border-bottom: 1px solid rgba($color: #000000, $alpha: 0.07);
        }

        ul, ol {
            margin-bottom: 40px;
            margin-left: var(--padding);
            margin-right: var(--padding);
            padding: 0 24px;

            li {
                margin-bottom: 6px;
            }
        }
    }
}

pre {
    color: rgba($color: #000000, $alpha: 0.8) !important;
}

@media (prefers-color-scheme: dark) {
    .article-page {
        header {
            background-color: #151515;
        }

        article {
            color: #858585;
            background-color: #1a1a1a;

            .meta .tags {
                a { color: #777; }
                a:hover {
                    color: #fff;
                }
            }

            strong { 
                color: #ccc;
                font-weight: 500;
            }

            h1, h2, h3, h4, h5 {
                color: #bbb;
            }

            pre {
                background-color: #111 !important;
                border-color: #252525
            }
        }
    }

    pre {
        color: #888 !important;
    }
}

